--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/material": "^5.14.5",
     "@react-three/drei": "^9.80.2",
     "@react-three/fiber": "^8.13.6",
     "@testing-library/jest-dom": "^5.17.0",
@@ -11,6 +15,7 @@
     "@types/three": "^0.155.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "three": "^0.155.0",
     "web-vitals": "^2.1.4"
