--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio_3d",
   "version": "0.1.0",
-  "homepage": "./#",
+  "homepage": "./",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -27,7 +27,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -b gh -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
