--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Terrence Shi",
-  "name": "Terrence Shi",
+  "name": "Terrence Shi's Portfolio Website",
   "icons": [
     {
       "src": "favicon.ico",
